[ADF - 1761] fixed responsiveness on smaller resolution

--- a/demo-shell-ng2/src/app/components/app-layout/app-layout.component.scss
+++ b/demo-shell-ng2/src/app/components/app-layout/app-layout.component.scss
@@ -54,9 +54,20 @@
     }
   }
 
-  @media ($mat-small) {
+  @media screen and  ($mat-small) {
     .adf-userinfo-name {
       display: none;
     }
+
+    .adf-search-bar-overflow {
+        padding-right: 4px;
+    }
   }
+
+  @media screen and ($mat-xsmall) {
+      .adf-search-bar-overflow {
+          padding-right: 16px;
+      }
+  }
+
 }
